--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-ico-material-design": "^5.1.2",
-    "react-native-maps": "^1.8.0",
+    "react-native-maps": "1.7.1",
     "react-native-paper": "^5.11.3",
     "react-native-picker-select": "^9.0.0",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.2",
     "expo-barcode-scanner": "~12.5.3"
   },
@@ -42,7 +42,7 @@
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "^5.1.3"
   },
   "engines": {
     "node": ">=16"
