--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "@reduxjs/toolkit": "^2.2.1",
     "expo": "^49.0.21",
+    "expo-barcode-scanner": "~12.5.3",
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-ico-material-design": "^5.1.2",
@@ -24,7 +26,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.2",
-    "expo-barcode-scanner": "~12.5.3"
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
