--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
     "@reduxjs/toolkit": "^2.2.1",
     "expo": "^49.0.21",
     "expo-barcode-scanner": "~12.5.3",
+    "expo-status-bar": "^1.11.1",
     "react": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-ico-material-design": "^5.1.2",
     "react-native-maps": "1.7.1",
     "react-native-paper": "^5.11.3",
     "react-native-picker-select": "^9.0.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.2",
     "react-redux": "^9.1.0",
-    "redux": "^5.0.1",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-gesture-handler": "~2.12.0"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
