--- a/Application-Front-End/package.json
+++ b/Application-Front-End/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.8",
     "expo": "^49.0.21",
     "expo-barcode-scanner": "~12.5.3",
     "expo-status-bar": "^1.11.1",
     "react": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-ico-material-design": "^5.1.2",
     "react-native-maps": "1.7.1",
