--- a/Application-Front-End/package.json
+++ b/Application-Front-End/package.json
@@ -19,6 +19,7 @@
     "expo": "^49.0.21",
     "expo-barcode-scanner": "~12.5.3",
     "expo-status-bar": "^1.11.1",
+    "firebase": "^10.10.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-axios": "^0.17.1",
