--- a/Application-Front-End/package.json
+++ b/Application-Front-End/package.json
@@ -12,6 +12,7 @@
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-native-firebase/app": "^19.1.2",
     "@react-native-firebase/auth": "^19.1.2",
+    "@react-native-firebase/firestore": "^19.1.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
