--- a/Application-Front-End/package.json
+++ b/Application-Front-End/package.json
@@ -21,7 +21,7 @@
     "axios": "^1.6.8",
     "expo": "^49.0.21",
     "expo-barcode-scanner": "~12.5.3",
-    "expo-status-bar": "^1.11.1",
+    "expo-status-bar": "~1.6.0",
     "firebase": "^10.10.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
